promtail/daemon.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: monitoring
spec:
  minReadySeconds: 10
  selector:
    matchLabels:
      name: promtail
  template:
    metadata:
      labels:
        name: promtail
    spec:
      containers:
        - args:
            - "-client.url=http://10.1.80.15:3100/api/prom/push"
            - "-config.file=/etc/promtail/promtail.yml"
          image: grafana/promtail:latest
          imagePullPolicy: Always
          name: promtail
          ports:
            - containerPort: 3200
              name: http-metrics
          resources:
            limits:
              cpu: 250m
              memory: 50Mi
            requests:
              cpu: 25m
              memory: 25Mi
          volumeMounts:
            - mountPath: /etc/promtail
              name: promtail
            - mountPath: /var/log
              name: varlog
            - mountPath: /var/lib/docker/containers
              name: varlibdockercontainers
              readOnly: true
      serviceAccount: promtail
      tolerations:
        - effect: NoSchedule
          operator: Exists
      volumes:
        - configMap:
            name: promtail
          name: promtail
        - hostPath:
            path: /var/log
          name: varlog
        - hostPath:
            path: /var/lib/docker/containers
          name: varlibdockercontainers
  updateStrategy:
    type: RollingUpdate
